# vizia

./: .editorconfig  .gitignore  .rustfmt.toml  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  MIGRATION_LENS_TO_SIGNALS.md  MIGRATION_RESULTS.md  MIGRATION_STATUS.md  PR.md  README.md  SIGNALS_PROPOSAL.md  TODO.md  docz
baseview/: Cargo.toml
baseview/src/: application.rs  lib.rs  parent_window.rs  proxy.rs  window.rs
core/: Cargo.toml  cargo.toml
core/resources/themes/: default_theme.css
core/src/: cache.rs  context.rs  data.rs  default_layout.css  default_theme.css  draw_system.rs  entity.rs  enviroment.rs  environment.rs  fonts.rs  handle.rs  hover_system.rs  image_system.rs  lib.rs  mouse.rs  resource.rs  style_system.rs  vg.rs  view.rs
core/src/animation/: anim_ext.rs  animation.rs  animation_builder.rs  animation_id.rs  animation_state.rs  interpolator.rs  mod.rs
core/src/binding/: data.rs  lens.rs  mod.rs  model.rs  state.rs  store.rs
core/src/context/: backend.rs  build.rs  draw.rs  event.rs  methods.rs  mod.rs  proxy.rs
core/src/events/: event.rs  event_handler.rs  event_manager.rs  mod.rs
core/src/extention/: mod.rs  press.rs
core/src/id/: generational_id.rs  id_manager.rs  mod.rs
core/src/input/: binding.rs  chord.rs  entry.rs  keymap.rs  mod.rs  modifiers.rs  mouse.rs
core/src/layout/: cache.rs  hierarchy.rs  iter.rs  mod.rs  node.rs
core/src/localization/: mod.rs
core/src/modifiers/: actions.rs
core/src/state/: binding.rs  data.rs  dispatch.rs  lens.rs  mod.rs  model.rs  res.rs  store.rs
core/src/storage/: animatable_set.rs  animatable_storage.rs  dense_storage.rs  mod.rs  shared_set.rs  sparse_set.rs  style_set.rs  style_storage.rs
core/src/style/: color.rs  display.rs  gradient.rs  layout.rs  mod.rs  parser.rs  prop.rs  prop_set.rs  property.rs  rule.rs  selector.rs  shadow.rs  specificity.rs  style_rule.rs  theme.rs  transform.rs  units.rs
core/src/style/themes/: default_theme.css  mod.rs
core/src/systems/: clipping.rs  draw_system.rs  hover.rs  hover_system.rs  image_system.rs  mod.rs  style.rs  style_system.rs  text_constraints.rs  transform_system.rs
core/src/text/: action.rs  edit.rs  input_handler.rs  layout.rs  mod.rs  movement.rs  selection.rs
core/src/tree/: branch_iter.rs  child_iter.rs  debug_iter.rs  focus_iter.rs  mod.rs  parent_iter.rs  tree.rs  tree_data.rs  tree_ext.rs  tree_iter.rs  tree_struct.rs  tree_tour.rs  window_iter.rs
core/src/views/: button.rs  checkbox.rs  codeview.rs  custom.rs  dropdown.rs  element.rs  for_each.rs  image.rs  inspector.rs  knob.rs  label.rs  list.rs  menu.rs  mod.rs  normalized_map.rs  picker.rs  popup.rs  radio_buttons.rs  rearrangable.rs  scrollbar.rs  scrollview.rs  slider.rs  slider2.rs  stack.rs  table.rs  textbox.rs
core/src/window/: cursor.rs  mod.rs  window_description.rs  window_event.rs  window_modifiers.rs
crates/vizia_baseview/: Cargo.toml
crates/vizia_baseview/src/: application.rs  lib.rs  parent_window.rs  proxy.rs  window.rs  window_modifiers.rs
crates/vizia_core/: Cargo.toml
crates/vizia_core/resources/themes/: center_layout.css  dark_theme.css  default_layout.css  default_theme.css  light_theme.css  markdown.css  theme.css
crates/vizia_core/src/: application.rs  cache.rs  entity.rs  environment.rs  fonts.rs  handle.rs  icons.rs  lib.rs  model.rs  resource.rs  view.rs
crates/vizia_core/src/accessibility/: mod.rs
crates/vizia_core/src/animation/: anim_ext.rs  animation.rs  animation_builder.rs  animation_id.rs  animation_state.rs  cubic_curve.rs  interpolator.rs  mod.rs  timing_function.rs  transition.rs
crates/vizia_core/src/binding/: binding.rs  binding_view.rs  data.rs  handler.rs  lens.rs  map.rs  mod.rs  model.rs  res.rs  store.rs
crates/vizia_core/src/context/: access.rs  backend.rs  draw.rs  event.rs  mod.rs  proxy.rs  resource.rs  task.rs  text_context.rs
crates/vizia_core/src/events/: event.rs  event_handler.rs  event_manager.rs  mod.rs  timer.rs
crates/vizia_core/src/id/: id_manager.rs  mod.rs
crates/vizia_core/src/input/: entry.rs  keymap.rs  mod.rs  modifiers.rs  mouse.rs
crates/vizia_core/src/layout/: bounding_box.rs  bounds.rs  cache.rs  hierarchy.rs  iter.rs  mod.rs  node.rs
crates/vizia_core/src/localization/: mod.rs
crates/vizia_core/src/modifiers/: abilities.rs  accessibility.rs  actions.rs  control.rs  drag.rs  layout.rs  mod.rs  style.rs  text.rs
crates/vizia_core/src/recoil/: async_state.rs  mod.rs  persistence.rs  (+1 more)
crates/vizia_derive/: Cargo.toml
crates/vizia_derive/src/: attr.rs  data.rs  lens.rs  lib.rs  model.rs  ray.rs
crates/vizia_input/: Cargo.toml
crates/vizia_input/src/: chord.rs  ime.rs  lib.rs  modifiers.rs  mouse.rs
crates/vizia_render/: Cargo.toml
crates/vizia_render/src/: canvas.rs  lib.rs  skia.rs  surface.rs
crates/vizia_storage/: Cargo.toml
crates/vizia_storage/src/: lib.rs
crates/vizia_style/: Cargo.toml
crates/vizia_style/selectors/: Cargo.toml  attr.rs  bloom.rs  build.rs  builder.rs  context.rs  lib.rs  matching.rs  nth_index_cache.rs  parser.rs  tree.rs
crates/vizia_style/src/: declaration.rs  error.rs  lib.rs  matching.rs  property.rs  pseudoclass.rs  pseudoelement.rs  selector.rs  stylesheet.rs  traits.rs
crates/vizia_vulkan/: Cargo.toml
crates/vizia_vulkan/examples/: basic_vulkan.rs
crates/vizia_vulkan/src/: application.rs  lib.rs  prelude.rs  render_target.rs  state.rs
crates/vizia_window/: Cargo.toml
crates/vizia_window/src/: cursor.rs  lib.rs  window_description.rs  window_event.rs
crates/vizia_winit/: Cargo.toml  build.rs
crates/vizia_winit/src/: application.rs  application_trait.rs  convert.rs  debug_view.rs  draw_surface.rs  lib.rs  window.rs  window_modifiers.rs
examples/gallery/: Cargo.toml
examples/gallery/src/: civitai.rs  images.rs  main.rs  style.css
examples/widget_gallery/: Cargo.toml
examples/widget_gallery/src/: app_data.rs  main.rs  style.css
glutin/: Cargo.toml
glutin/src/: application.rs  keyboard.rs  lib.rs  window.rs
winit/: Cargo.toml
winit/src/: application.rs  convert.rs  cursor.rs  keyboard.rs  lib.rs  window.rs
(+749 files in other folders)
