[package]
name = "vizia"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Rust GUI Framework"
autoexamples = false
rust-version = "1.60"

[workspace]
members = [ "crates/*", "run-wasm" ]

[[example]]
name = "accesskit"
path = "examples/accessibility/accesskit.rs"

[[example]]
name = "action_modifier"
path = "examples/action_modifier.rs"

[[example]]
name = "animation"
path = "examples/animation.rs"

[[example]]
name = "datepicker"
path = "examples/views/datepicker.rs"


[[example]]
name = "picklist"
path = "examples/views/picklist.rs"

[[example]]
name = "combobox"
path = "examples/views/combobox.rs"

[[example]]
name = "cursor_icon"
path = "examples/cursor_icon.rs"

[[example]]
name = "l10n"
path = "examples/localization/l10n.rs"

[[example]]
name = "modal"
path = "examples/modal.rs"

[[example]]
name = "proxy"
path = "examples/proxy.rs"

[[example]]
name = "scrollview"
path = "examples/views/scrollview.rs"

[[example]]
name = "stylesheet"
path = "examples/stylesheet.rs"

[[example]]
name = "switch"
path = "examples/views/switch.rs"

[[example]]
name = "notification"
path = "examples/views/notification.rs"

[[example]]
name = "chip"
path = "examples/views/chip.rs"

[[example]]
name = "rating"
path = "examples/views/rating.rs"

[[example]]
name = "textbox_list"
path = "examples/textbox_list.rs"

[[example]]
name = "button"
path = "examples/views/button.rs"

[[example]]
name = "checkbox"
path = "examples/views/checkbox.rs"

[[example]]
name = "dropdown"
path = "examples/views/dropdown.rs"

[[example]]
name = "background_image"
path = "examples/style/background_image.rs"

[[example]]
name = "knob"
path = "examples/views/knob.rs"

[[example]]
name = "label"
path = "examples/views/label.rs"

[[example]]
name = "tooltip"
path = "examples/views/tooltip.rs"

[[example]]
name = "timepicker"
path = "examples/views/timepicker.rs"

[[example]]
name = "spinbox"
path = "examples/views/spinbox.rs"

[[example]]
name = "slider"
path = "examples/views/slider.rs"


[[example]]
name = "radiobutton"
path = "examples/views/radiobutton.rs"

[[example]]
name = "zstack"
path = "examples/views/zstack.rs"

[[example]]
name = "hstack"
path = "examples/views/hstack.rs"

[[example]]
name = "vstack"
path = "examples/views/vstack.rs"

[[example]]
name = "popup"
path = "examples/views/popup.rs"

[[example]]
name = "progressbar"
path = "examples/views/progressbar.rs"

[[example]]
name = "textbox"
path = "examples/views/textbox.rs"

[[example]]
name = "number_input"
path = "examples/number_input.rs"

[[example]]
name = "widget_gallery"
path = "examples/widget_gallery.rs"

[[example]]
name = "list"
path = "examples/views/list.rs"

[[example]]
name = "virtual_list"
path = "examples/views/virtual_list.rs"

[[example]]
name = "selectable_list"
path = "examples/lists/selectable_list.rs"

[[example]]
name = "editable_list"
path = "examples/lists/editable_list.rs"

[[example]]
name = "multiselectable_list"
path = "examples/lists/multiselectable_list.rs"

[[example]]
name = "sortable_list"
path = "examples/lists/sortable_list.rs"

[[example]]
name = "static_list"
path = "examples/lists/static_list.rs"

[[example]]
name = "menu"
path = "examples/views/menu.rs"

[[example]]
name = "tabview"
path = "examples/views/tabview.rs"


[[example]]
name = "counter"
path = "examples/7GUIs/counter.rs"

[[example]]
name = "temperature_converter"
path = "examples/7GUIs/temperature_converter.rs"

[[example]]
name = "flight_booker"
path = "examples/7GUIs/flight_booker.rs"

[[example]]
name = "crud"
path = "examples/7GUIs/crud.rs"

[[example]]
name = "circle_drawer"
path = "examples/7GUIs/circle_drawer.rs"

[[example]]
name = "timer"
path = "examples/7GUIs/timer.rs"

[[example]]
name = "keymap_basic"
path = "examples/keymap_basic.rs"

[[example]]
name = "keymap_change_entries"
path = "examples/keymap_change_entries.rs"

[[example]]
name = "window_modifiers"
path = "examples/window_modifiers.rs"

[[example]]
name = "user_scale"
path = "examples/user_scale.rs"

[[example]]
name = "long_list"
path = "examples/lists/long_list.rs"

[[example]]
name = "locale_binding"
path = "examples/localization/locale_binding.rs"

[[example]]
name = "inline"
path = "examples/style/inline.rs"

[[example]]
name = "outline"
path = "examples/style/outline.rs"

[[example]]
name = "fluent_translation"
path = "examples/localization/fluent_translation.rs"

[[example]]
name = "fluent_variables"
path = "examples/localization/fluent_variables.rs"

[[example]]
name = "save_dialog"
path = "examples/save_dialog.rs"

[[example]]
name = "dragdrop"
path = "examples/dragdrop.rs"

[[example]]
name = "transform"
path = "examples/style/transform.rs"

[[example]]
name = "transform_origin"
path = "examples/style/transform_origin.rs"

[[example]]
name = "gradient"
path = "examples/style/gradient.rs"

[[example]]
name = "box_shadow"
path = "examples/style/box_shadow.rs"

[[example]]
name = "border"
path = "examples/style/border.rs"

[[example]]
name = "text"
path = "examples/style/text.rs"

[[example]]
name = "filter"
path = "examples/style/filter.rs"

[[example]]
name = "clipping"
path = "examples/style/clipping.rs"

[[example]]
name = "transition"
path = "examples/style/transition.rs"

[[example]]
name = "zorder"
path = "examples/style/zorder.rs"

[[example]]
name = "combinators"
path = "examples/style/combinators.rs"

[[example]]
name = "selectors"
path = "examples/style/selectors.rs"

[[example]]
name = "pseudo_classes"
path = "examples/style/pseudo_classes.rs"

[[example]]
name = "background_size"
path = "examples/style/background_size.rs"

[[example]]
name = "text_layout"
path = "examples/text_layout.rs"

[[example]]
name = "custom_modifiers"
path = "examples/custom_modifiers.rs"

[[example]]
name = "custom_view"
path = "examples/custom_view.rs"

[[example]]
name = "keyframes"
path = "examples/keyframes.rs"

[[example]]
name = "lens_map"
path = "examples/lens_map.rs"

[[example]]
name = "timers"
path = "examples/timers.rs"

[features]
default = ["winit", "clipboard", "x11", "wayland", "embedded_fonts"]
clipboard = ["vizia_core/clipboard", "vizia_winit?/clipboard"]
winit = ["vizia_winit"]
baseview = ["vizia_baseview"]
x11 = ["vizia_winit?/x11", "vizia_core/x11"]
wayland = ["vizia_winit?/wayland", "vizia_core/wayland"]
embedded_fonts = ["vizia_core/embedded_fonts"]

[dependencies]
vizia_core = { version = "0.1.0", path = "crates/vizia_core"}
vizia_winit = { version = "0.1.0", path = "crates/vizia_winit", optional = true }
vizia_baseview = { version = "0.1.0", path = "crates/vizia_baseview", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
chrono = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking"] }
log = "0.4.19"
fern = { version = "0.6" }
