[package]
name = "vizia"
description = "A declarative desktop GUI framework"
autoexamples = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.82"
exclude = ["assets/", "examples/"]

[features]
default = ["winit", "clipboard", "x11", "wayland", "markdown", "accesskit"]
clipboard = ["vizia_core/clipboard", "vizia_winit?/clipboard"]
winit = ["vizia_winit"]
baseview = ["vizia_baseview"]
x11 = ["vizia_winit?/x11", "vizia_core/x11"]
wayland = ["vizia_winit?/wayland", "vizia_core/wayland"]
accesskit = ["vizia_winit?/accesskit"]
markdown = ["vizia_core/markdown"]
rayon = ["vizia_core/rayon"]

[dependencies]
vizia_core.workspace = true
vizia_winit = { workspace = true, optional = true }
vizia_baseview = { workspace = true, optional = true }

[dev-dependencies]
chrono = "0.4"
log = "0.4"
fern = "0.7"

[workspace]
members = [ "crates/*", "examples/todo", "examples/widget_gallery"]

[workspace.package]
version = "0.2.0"
authors = ["George Atkinson"]
edition = "2021"
license = "MIT"
repository = "https://github.com/vizia/vizia"

[workspace.dependencies]
vizia = { version = "0.2.0", path = "." }
vizia_core = { version = "0.2.0", path = "crates/vizia_core" }
vizia_winit = { version = "0.2.0", path = "crates/vizia_winit" }
vizia_baseview = { version = "0.2.0", path = "crates/vizia_baseview" }
vizia_derive = { version = "0.2.0", path = "crates/vizia_derive" }
vizia_id = { version = "0.2.0", path = "crates/vizia_id" }
vizia_input = { version = "0.2.0", path = "crates/vizia_input" }
vizia_storage = { version = "0.2.0", path = "crates/vizia_storage" }
vizia_style = { version = "0.2.0", path = "crates/vizia_style" }
vizia_window = { version = "0.2.0", path = "crates/vizia_window" }

[workspace.lints.rust]
# future_incompatible = "allow"
# let_underscore = "allow"
# nonstandard_style = "allow"
# rust_2018_compatibility = "allow"
# rust_2018_idioms = "allow"
# rust_2021_compatibility = "allow"
# unused = "allow"

[workspace.lints.clippy]
# cargo = "allow"
# pedantic = "allow"
# nursery = "allow"
# separated_literal_suffix = "allow"

[[example]]
name = "counter"
path = "examples/7GUIs/counter.rs"

[[example]]
name = "crud"
path = "examples/7GUIs/crud.rs"

[[example]]
name = "flight_booker"
path = "examples/7GUIs/flight_booker.rs"

[[example]]
name = "temperature_converter"
path = "examples/7GUIs/temperature_converter.rs"

[[example]]
name = "virtual_list"
path = "examples/views/virtual_list.rs"

[[example]]
name = "l10n"
path = "examples/l10n.rs"

[[example]]
name = "animation"
path = "examples/animation.rs"

[[example]]
name = "cursor_icon"
path = "examples/cursor_icon.rs"

[[example]]
name = "dragdrop"
path = "examples/dragdrop.rs"

[[example]]
name = "keymap"
path = "examples/keymap.rs"

[[example]]
name = "number_input"
path = "examples/number_input.rs"

[[example]]
name = "window_modifiers"
path = "examples/window_modifiers.rs"

[[example]]
name = "datepicker"
path = "examples/views/datepicker.rs"

[[example]]
name = "picklist"
path = "examples/views/picklist.rs"

[[example]]
name = "combobox"
path = "examples/views/combobox.rs"

[[example]]
name = "scrollview"
path = "examples/views/scrollview.rs"

[[example]]
name = "stylesheet"
path = "examples/stylesheet.rs"

[[example]]
name = "switch"
path = "examples/views/switch.rs"

[[example]]
name = "chip"
path = "examples/views/chip.rs"

[[example]]
name = "rating"
path = "examples/views/rating.rs"

[[example]]
name = "button"
path = "examples/views/button.rs"

[[example]]
name = "checkbox"
path = "examples/views/checkbox.rs"

[[example]]
name = "dropdown"
path = "examples/views/dropdown.rs"

[[example]]
name = "knob"
path = "examples/views/knob.rs"

[[example]]
name = "label"
path = "examples/views/label.rs"

[[example]]
name = "tooltip"
path = "examples/views/tooltip.rs"

[[example]]
name = "toggle_button"
path = "examples/views/toggle_button.rs"

[[example]]
name = "spinbox"
path = "examples/views/spinbox.rs"

[[example]]
name = "slider"
path = "examples/views/slider.rs"

[[example]]
name = "radiobutton"
path = "examples/views/radiobutton.rs"

[[example]]
name = "zstack"
path = "examples/views/zstack.rs"

[[example]]
name = "hstack"
path = "examples/views/hstack.rs"

[[example]]
name = "vstack"
path = "examples/views/vstack.rs"

[[example]]
name = "progressbar"
path = "examples/views/progressbar.rs"

[[example]]
name = "textbox"
path = "examples/views/textbox.rs"

[[example]]
name = "list"
path = "examples/views/list.rs"

[[example]]
name = "menu"
path = "examples/views/menu.rs"

[[example]]
name = "menubar"
path = "examples/views/menubar.rs"

[[example]]
name = "tabview"
path = "examples/views/tabview.rs"

[[example]]
name = "xypad"
path = "examples/views/xypad.rs"

[[example]]
name = "circle_drawer"
path = "examples/7GUIs/circle_drawer.rs"

[[example]]
name = "timer"
path = "examples/7GUIs/timer.rs"

[[example]]
name = "save_dialog"
path = "examples/save_dialog.rs"

[[example]]
name = "custom_view"
path = "examples/custom_view.rs"

[[example]]
name = "timers"
path = "examples/timers.rs"

[[example]]
name = "markdown"
path = "examples/views/markdown.rs"
required-features = ["markdown"]

[[example]]
name = "rich_text"
path = "examples/rich_text.rs"
required-features = ["markdown"]

[[example]]
name = "multiwindow"
path = "examples/multiwindow.rs"

[[example]]
name = "popup_window"
path = "examples/popup_window.rs"

[[example]]
name = "svg"
path = "examples/views/svg.rs"

[[example]]
name = "grid"
path = "examples/views/grid.rs"

[[example]]
name = "collapsible"
path = "examples/views/collapsible.rs"

[[example]]
name = "divider"
path = "examples/views/divider.rs"
