[package]
name = "vizia"
description = "A declarative desktop GUI framework"
autoexamples = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude = ["assets/", "examples/"]

[features]
default = ["winit", "clipboard", "x11", "wayland", "markdown", "accesskit"]
clipboard = ["vizia_core/clipboard", "vizia_winit?/clipboard"]
winit = ["vizia_winit"]
baseview = ["vizia_baseview"]
x11 = ["vizia_winit?/x11", "vizia_core/x11"]
wayland = ["vizia_winit?/wayland", "vizia_core/wayland"]
accesskit = ["vizia_winit?/accesskit"]
markdown = ["vizia_core/markdown"]
rayon = ["vizia_core/rayon"]
serde = ["vizia_core/serde"]

[dependencies]
vizia_core.workspace = true
vizia_winit = { workspace = true, optional = true, default-features = false}
vizia_baseview = { workspace = true, optional = true }

[dev-dependencies]
chrono.workspace = true
log.workspace = true
fern.workspace = true

[workspace]
members = [ "crates/*", "examples/todo", "examples/widget_gallery", "examples/gallery"]

[workspace.package]
version = "0.4.0"
authors = ["George Atkinson"]
edition = "2024"
license = "MIT"
repository = "https://github.com/vizia/vizia"
rust-version = "1.85"

[workspace.dependencies]
vizia = { version = "0.4.0", path = "." }
vizia_core = { version = "0.4.0", path = "crates/vizia_core" }
vizia_winit = { version = "0.4.0", path = "crates/vizia_winit", default-features = false }
vizia_baseview = { version = "0.4.0", path = "crates/vizia_baseview" }
vizia_id = { version = "0.4.0", path = "crates/vizia_id" }
vizia_input = { version = "0.4.0", path = "crates/vizia_input" }
vizia_storage = { version = "0.4.0", path = "crates/vizia_storage" }
vizia_style = { version = "0.4.0", path = "crates/vizia_style" }
vizia_window = { version = "0.4.0", path = "crates/vizia_window" }
vizia_reactive = { version = "0.4.0", path = "crates/vizia_reactive" }
accesskit = "0.24"
accesskit_winit = "0.32"
baseview = { git = "https://github.com/vizia/baseview.git", rev = "77fec022db136fb771d5775ae13d088f4f166c04", features = ["opengl"] }
bitflags = "2.11.0"
bytes = "1.11.1"
chrono = "0.4.44"
comrak = { version = "0.51.0", default-features = false }
copypasta = { version = "0.10.2", default-features = false }
cssparser = "0.35"
cssparser-color = "0.3"
dashmap = { version = "6.1", features = ["inline"] }
fern = "0.7"
fluent-bundle = "0.15"
fluent-langneg = "0.13"
fxhash = "0.2"
gl-rs = { package = "gl", version = "0.14" }
glutin = { version = "0.32.3", default-features = false, features = ["egl", "wgl", "glx"] }
glutin-winit = { version = "0.5", default-features = false, features = ["egl", "wgl", "glx"] }
hashbrown = "0.16.1"
indexmap = "2.13"
keyboard-types = { version = "0.7", default-features = false }
log = "0.4.29"
morphorm = {git = "https://github.com/vizia/morphorm.git", rev = "e7e5fe35e5f184500d3030287f948a4f4c7f57ae"}
open = "5.3.3"
parking_lot = "0.12.1"
proc-macro2 = "1.0.106"
qfilter = "0.2.5"
quote = "1.0.45"
raw-window-handle = "0.5"
rayon = "1.11"
reqwest = { version = "0.13.2", features = ["json", "query"] }
selectors = "0.32"
serde = { version = "1.0", features = ["derive"] }
skia-safe = { version = "0.93.1", features = ["gl", "textlayout", "svg"] }
syn = "2.0.117"
sys-locale = "0.3"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
unic-langid = { version = "0.9.6", features = ["macros"] }
unicode-segmentation = "1.12"
unicode-bidi = "0.3.18"
web-time = "1.1"
windows-sys = { version = "0.59", default-features = false, features = ["Win32_Graphics_Dwm"] }
winit = { version = "0.30.13", default-features = false }

[target."cfg(target_os = \"macos\")".dependencies.skia-safe]
version = "0.93.1"
features = ["textlayout", "svg", "metal", "gl"]

[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
version = "0.93.1"
features = ["textlayout", "svg", "x11", "wayland", "gl"]

[workspace.lints.rust]
# future_incompatible = "allow"
# let_underscore = "allow"
# nonstandard_style = "allow"
# rust_2018_compatibility = "allow"
# rust_2018_idioms = "allow"
# rust_2021_compatibility = "allow"
# unused = "allow"

[workspace.lints.clippy]
# cargo = "allow"
# pedantic = "allow"
# nursery = "allow"
# separated_literal_suffix = "allow"

[[example]]
name = "counter"
path = "examples/7GUIs/counter.rs"

[[example]]
name = "crud"
path = "examples/7GUIs/crud.rs"

[[example]]
name = "flight_booker"
path = "examples/7GUIs/flight_booker.rs"

[[example]]
name = "temperature_converter"
path = "examples/7GUIs/temperature_converter.rs"

[[example]]
name = "virtual_list"
path = "examples/views/virtual_list.rs"

[[example]]
name = "l10n"
path = "examples/l10n.rs"

[[example]]
name = "animation"
path = "examples/animation.rs"

[[example]]
name = "cursor_icon"
path = "examples/cursor_icon.rs"

[[example]]
name = "dragdrop"
path = "examples/dragdrop.rs"

[[example]]
name = "keymap"
path = "examples/keymap.rs"

[[example]]
name = "number_input"
path = "examples/number_input.rs"

[[example]]
name = "window_modifiers"
path = "examples/window_modifiers.rs"

[[example]]
name = "calendar"
path = "examples/views/calendar.rs"

[[example]]
name = "select"
path = "examples/views/select.rs"

[[example]]
name = "combobox"
path = "examples/views/combobox.rs"

[[example]]
name = "scrollview"
path = "examples/views/scrollview.rs"

[[example]]
name = "stylesheet"
path = "examples/stylesheet.rs"

[[example]]
name = "switch"
path = "examples/views/switch.rs"

[[example]]
name = "chip"
path = "examples/views/chip.rs"

[[example]]
name = "rating"
path = "examples/views/rating.rs"

[[example]]
name = "button"
path = "examples/views/button.rs"

[[example]]
name = "button_group"
path = "examples/views/button_group.rs"

[[example]]
name = "checkbox"
path = "examples/views/checkbox.rs"

[[example]]
name = "dropdown"
path = "examples/views/dropdown.rs"

[[example]]
name = "knob"
path = "examples/views/knob.rs"

[[example]]
name = "label"
path = "examples/views/label.rs"

[[example]]
name = "tooltip"
path = "examples/views/tooltip.rs"

[[example]]
name = "toggle_button"
path = "examples/views/toggle_button.rs"

[[example]]
name = "spinbox"
path = "examples/views/spinbox.rs"

[[example]]
name = "slider"
path = "examples/views/slider.rs"

[[example]]
name = "radiobutton"
path = "examples/views/radiobutton.rs"

[[example]]
name = "zstack"
path = "examples/views/zstack.rs"

[[example]]
name = "hstack"
path = "examples/views/hstack.rs"

[[example]]
name = "vstack"
path = "examples/views/vstack.rs"

[[example]]
name = "progressbar"
path = "examples/views/progressbar.rs"

[[example]]
name = "textbox"
path = "examples/views/textbox.rs"

[[example]]
name = "list"
path = "examples/views/list.rs"

[[example]]
name = "menu"
path = "examples/views/menu.rs"

[[example]]
name = "menubar"
path = "examples/views/menubar.rs"

[[example]]
name = "tabview"
path = "examples/views/tabview.rs"

[[example]]
name = "xypad"
path = "examples/views/xypad.rs"

[[example]]
name = "circle_drawer"
path = "examples/7GUIs/circle_drawer.rs"

[[example]]
name = "timer"
path = "examples/7GUIs/timer.rs"

[[example]]
name = "save_dialog"
path = "examples/save_dialog.rs"

[[example]]
name = "custom_view"
path = "examples/custom_view.rs"

[[example]]
name = "timers"
path = "examples/timers.rs"

[[example]]
name = "markdown"
path = "examples/views/markdown.rs"
required-features = ["markdown"]

[[example]]
name = "rich_text"
path = "examples/rich_text.rs"
required-features = ["markdown"]

[[example]]
name = "multiwindow"
path = "examples/multiwindow.rs"

[[example]]
name = "popup_window"
path = "examples/popup_window.rs"

[[example]]
name = "svg"
path = "examples/views/svg.rs"

[[example]]
name = "grid"
path = "examples/views/grid.rs"

[[example]]
name = "collapsible"
path = "examples/views/collapsible.rs"

[[example]]
name = "accordion"
path = "examples/views/accordion.rs"

[[example]]
name = "card"
path = "examples/views/card.rs"

[[example]]
name = "avatar"
path = "examples/views/avatar.rs"

[[example]]
name = "divider"
path = "examples/views/divider.rs"

[[example]]
name = "resizable"
path = "examples/views/resizable.rs"

[[example]]
name = "variables"
path = "examples/variables.rs"

[[example]]
name = "virtual_table"
path = "examples/views/virtual_table.rs"

[[example]]
name = "virtual_tree_table"
path = "examples/views/virtual_tree_table.rs"

[[example]]
name = "table"
path = "examples/views/table.rs"

[[example]]
name = "tree_table"
path = "examples/views/tree_table.rs"
