[package]
name = "vizia_baseview"
version = "0.1.0"
authors = ["George Atkinson <geomyles@yahoo.co.uk>", "Billy Messenger <BillyDM@protonmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/geom3trik/VIZIA"
description = "Baseview backend for vizia"


[dependencies]
raw-gl-context = {git = "https://github.com/glowcoil/raw-gl-context", rev = "01f6251e7605e1d7de4bf1fead39693819398ef0"}
vizia_core = { path = "../core" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "f6e99e9aa6f5aeb6b721cb05e4d882a51d995909"}
keyboard-types = { version = "0.5.0", default-features = false }
raw-window-handle = "0.3"
femtovg = {version = "0.3.0", default-features = false}
