[package]
name = "vizia_baseview"
version = "0.1.0"
authors = ["George Atkinson <geomyles@yahoo.co.uk>", "Billy Messenger <BillyDM@protonmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/vizia/vizia"
description = "Baseview backend for vizia"


[dependencies]
vizia_core = { path = "../core" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "b3712638bacb3fdf2883cb5aa3f6caed0e91ac8c", features = ["opengl"] }
keyboard-types = { version = "0.6.2", default-features = false }
raw-window-handle = "0.4"
femtovg = {version = "0.3.0", default-features = false}
