[package]
name = "vizia_baseview"
version = "0.1.0"
authors = ["George Atkinson <geomyles@yahoo.co.uk>", "Billy Messenger <BillyDM@protonmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/vizia/vizia"
description = "Baseview backend for vizia"


[dependencies]
vizia_core = { path = "../core" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "b3712638bacb3fdf2883cb5aa3f6caed0e91ac8c", features = ["opengl"] }
keyboard-types = { version = "0.6.2", default-features = false }
raw-window-handle = "0.4"
femtovg = { git = "https://github.com/femtovg/femtovg", rev = "87fe627794f3f793d8e3a338c838a2f8e8a8aa9d", default-features = false }
lazy_static = "1.4.0"
