[package]
name = "vizia_core"
version = "0.1.0"
authors = ["George Atkinson"]
license = "MIT"
repository = "https://github.com/vizia/vizia"
edition = "2021"
description = "Core components of vizia"

[features]
meadowlark = ["rusty-daw-core"]
clipboard = ["copypasta"]

[dependencies]
vizia_derive = {version = "0.1.0", path = "../derive"}
femtovg = { git = "https://github.com/femtovg/femtovg", rev = "87fe627794f3f793d8e3a338c838a2f8e8a8aa9d", default-features = false, features = ["image-loading"] }
image = { version = "0.24.0", default-features = false, features = ["png"] } # inherited from femtovg
morphorm = {git = "https://github.com/vizia/morphorm", features = ["rounding"], rev = "c14e888b1d66719fc3f13ccdb1ea01a10368ef9e" }
bitflags = "1.3.2"
fnv = "1.0.7"
keyboard-types = { version = "0.6.2", default-features = false }
fluent-bundle = "0.15.2"
fluent-langneg = "0.13"
fluent-syntax = "0.11.0"
unic-langid = "0.9"
locale_config = "*"  # see https://github.com/rust-locale/locale_config for wildcard explanation
cssparser = "0.27.2"
unicode-segmentation = "1.8.0"
unicode-bidi = "0.3.7"
copypasta = {version = "0.7.1", optional = true}
instant = "0.1.12"
web-sys = "*"

rusty-daw-core = {version = "0.7.4", optional = true}

# Required so that doc tests will compile
[dev-dependencies]
vizia_winit = {version = "0.1.0", path = "../winit" }
