[package]
name = "vizia_baseview"
authors = ["George Atkinson <geomyles@yahoo.co.uk>", "Billy Messenger <BillyDM@protonmail.com>"]
description = "Baseview backend for vizia"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vizia_core.workspace = true
vizia_input.workspace = true
vizia_id.workspace = true

baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "579130ecb4f9f315ae52190af42f0ea46aeaa4a2", features = ["opengl"] }
raw-window-handle = "0.5"
gl-rs = { package = "gl", version = "0.14" }
skia-safe = {version = "0.75", features = ["gl"]}

[lints]
workspace = true
