[package]
name = "vizia_baseview"
authors = ["George Atkinson <geomyles@yahoo.co.uk>", "Billy Messenger <BillyDM@protonmail.com>"]
description = "Baseview backend for vizia"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vizia_core.workspace = true
vizia_input.workspace = true
vizia_id.workspace = true

baseview.workspace = true
raw-window-handle.workspace = true
gl-rs.workspace = true
skia-safe.workspace = true

[lints]
workspace = true
