[package]
name = "vizia_core"
description = "Core components of vizia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
clipboard = ["copypasta"]
x11 = ["copypasta?/x11"]
wayland = ["copypasta?/wayland"]
markdown = ["comrak"]

[dependencies]
vizia_derive.workspace = true
vizia_storage.workspace = true
vizia_id.workspace = true
vizia_input.workspace = true
vizia_window.workspace = true
vizia_style.workspace = true
accesskit = "0.16"

skia-safe = { version = "0.80", features = ["gl", "textlayout", "svg"] }
# morphorm = {path = "../../../morphorm"}
morphorm = {git = "https://github.com/vizia/morphorm", branch = "alternate"}
bitflags = "2.6"
fnv = "1.0"
fluent-bundle = "0.15"
fluent-langneg = "0.13"
unic-langid = {version = "0.9", features = ["macros"]}
sys-locale = "0.3"
unicode-segmentation = "1.11"
copypasta = {version = "0.10", optional = true, default-features = false }
chrono = "0.4"
hashbrown = "0.14"
log = "0.4"
indexmap = "2.4"
qfilter = "0.2"
# reqwest = { version = "0.11.9", features = ["blocking"] }
web-time = "1.1"
comrak = { version = "0.33", default-features = false, optional = true }
open = "5.2"
sha2 = "0.10"

[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
version = "0.80"
features = ["gl", "textlayout", "svg", "x11", "wayland"]

[lib]
doctest = false

[lints]
workspace = true
