[package]
name = "vizia_derive"
version = "0.1.0"
description = "Derive macros for vizia"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[lints]
workspace = true
