[package]
name = "vizia_input"
version = "0.1.0"
description = "The input components of vizia"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.76"

[dependencies]
vizia_id = { path = "../vizia_id" }

keyboard-types = { version = "0.6", default-features = false }
bitflags = "2.4"

[lints]
workspace = true
