[package]
name = "vizia_input"
description = "The input components of vizia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vizia_id.workspace = true

keyboard-types = { version = "0.6", default-features = false }
bitflags = "2.6"

[lints]
workspace = true
