[package]
name = "vizia_input"
description = "The input components of vizia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vizia_id.workspace = true

keyboard-types.workspace = true
bitflags.workspace = true

[lints]
workspace = true
