[package]
name = "vizia_storage"
version = "0.1.0"
description = "The storage data structures of vizia"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.76"

[dependencies]
vizia_id = { path = "../vizia_id" }

# morphorm = {path = "../../../morphorm" }
morphorm = {git = "https://github.com/vizia/morphorm.git", branch = "auto-min-size2"}
# morphorm = "0.6.4"

[lints]
workspace = true
