[package]
name = "vizia_storage"
description = "The storage data structures of vizia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vizia_id.workspace = true

# morphorm = {path = "../../../morphorm" }
morphorm = {git = "https://github.com/vizia/morphorm.git", branch = "auto-min-size2"}
# morphorm = "0.6.4"

[lints]
workspace = true
