[package]
name = "vizia_style"
description = "The style components of vizia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cssparser = "0.35"
cssparser-color = "0.3"
skia-safe = { version = "0.84", features = ["gl", "textlayout", "svg"] }
selectors = "0.27"
morphorm = {git = "https://github.com/vizia/morphorm", branch = "absolute_auto"}
bitflags = "2.8"
precomputed-hash = "0.1"
fxhash = "0.2"

[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
version = "0.84"
features = ["gl", "textlayout", "svg", "x11", "wayland"]

[lints]
workspace = true
