[package]
name = "vizia_style"
description = "The style components of vizia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vizia_render.workspace = true

cssparser = "0.35"
cssparser-color = "0.3"
selectors = "0.27"
morphorm = "0.7.0"
bitflags = "2.8"
precomputed-hash = "0.1"
fxhash = "0.2"

[lints]
workspace = true
